# alexa-rpg-backoffice/src/controllers/v1/action.controller.ts
@@ -87,8 +87,6 @@ export class ActionController extends BaseHttpController implements interfaces.C
 
     const formattedTags = tags?.split(';');
 
-    console.log(pageSize);
-
     const response = await this.selectActionPaginationUseCase.execute(
       idStory,
       {
